# src/routes.ts
@@ -101,6 +101,7 @@ routes.get('/assinatura', authMiddleware, assinaturaController.find);
 routes.get('/assinatura/:id', authMiddleware, assinaturaController.findOne);
 routes.post('/assinatura/assinar-plano', authMiddleware, authMoradorAdministradorMiddleware, assinaturaController.assinar);
 routes.get('/assinantes', authMiddleware, authAdministradorNossoCafofoMiddleware, assinaturaController.findAssinantes);
+routes.get('/assinantes/:id', authMiddleware, authAdministradorNossoCafofoMiddleware, assinaturaController.findAssinanteEspecifico);
 
 routes.post('/festa', authMiddleware, festaController.create);
 routes.get('/festa', authMiddleware, festaController.find);
