# src/swagger.json
@@ -2006,6 +2006,66 @@
                 }
             }
         },
+        "/assinantes/{id}": {
+            "get": {
+                "summary": "Consulta Assinante",
+                "description": "Rota para consulta de assinante específico. Apenas Administradores Nosso Cafofo.",
+                "tags": [
+                    "Assinantes"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Identificador do registro de assinatura",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Erro ao consultar informações de assinante",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/definitions/Erro"
+                                },
+                                "examples": {
+                                    "erro": {
+                                        "value": {
+                                            "error": "Erro ao consultar informações de assinante!",
+                                            "message": "Parâmetros inválidos!"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/definitions/Assinatura"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/morador": {
             "post": {
                 "summary": "Cadastro de Morador",
